# BraccioPlayMemory

./: .gitignore  .gitmodules  Classes  LICENSE  README.md  commands  commands.md
Arduino/braccio_ros/: braccio_ros.ino
BBox-Label-Tool/: convert.py  convert_txt.py  merge_image_labels.py
BBox-Label-Tool/Labels_merged/: IMAG3654.txt  IMAG3662.txt  IMAG3673.txt  IMAG3681.txt  IMAG3682.txt  IMAG3689.txt  IMAG3698.txt  IMAG3727.txt  IMAG3731.txt  IMAG3744.txt  IMAG3748.txt  IMAG3750.txt  IMAG3751.txt  IMAG3754.txt  IMAG3755.txt  IMAG3756.txt  IMAG3757.txt  IMAG3758.txt  IMAG3759.txt  (+28 more)
NewlyLabeledData/: IMAG3632.txt  IMAG3633.txt  IMAG3634.txt  IMAG3637.txt  IMAG3638.txt  IMAG3639.txt  IMAG3640.txt  IMAG3642.txt  IMAG3646.txt  IMAG3647.txt  IMAG3649.txt  IMAG3652.txt  IMAG3653.txt  IMAG3655.txt  IMAG3658.txt  IMAG3660.txt  IMAG3661.txt  IMAG3662.txt  IMAG3663.txt  IMAG3664.txt  IMAG3667.txt  IMAG3669.txt  IMAG3671.txt  IMAG3672.txt  IMAG3675.txt  IMAG3676.txt  IMAG3677.txt  IMAG3678.txt  IMAG3679.txt  IMAG3682.txt  IMAG3686.txt  IMAG3687.txt  IMAG3689.txt  IMAG3690.txt  IMAG3691.txt  IMAG3693.txt  IMAG3695.txt  IMAG3700.txt  IMAG3701.txt  IMAG3702.txt  (+523 more)
Poster/: column_aligned.sty  dl4cv_tikzposter_template.aux  dl4cv_tikzposter_template.tex  final_project_proposal.aux  final_project_proposal.tex
RawImages/: Classes
TrainTest/: test.txt  train.txt
catkin_ws/: README.md
catkin_ws/src/detect_and_collect/: CMakeLists.txt  package.xml
catkin_ws/src/detect_and_collect/parse_and_publish/: parse_and_publish.cpp
darknet/: .gitignore  Makefile  README.md  process.py
(+614 files in other folders)
